Theme the color pallete

--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@ a {
 }
 
 a:hover {
-  color: #006666;
+  color: #808000;
 }
 
 body {
   color: #333333;
-  margin: 40px;
+  margin: 5% 10%;
   font-size: 1.5rem;
-  background: #F5F5F5;
+  background-color: #D0EAE2;
 }
 
 h1, h2 {
-  color: #001F3F;
+  color: #228B22;
 }
