--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 a {
   color: #FFFFFF;
-  padding: 15px 20px;
+  padding: 0.8rem 1.2rem;
   font-size: 1.1rem;
   transition: 0.2s;
   font-weight: bold;
-  border-radius: 30px;
+  border-radius: 1.5rem;
   text-decoration: none;
   background-color: #323232;
 }
